Add remaining example files for week 5 web development

--- a/lists.html
+++ b/lists.html
@@ -2,7 +2,7 @@
 
 <!-- 
 
-Demonstrates (unordered) lists
+Demonstrates (unordered & ordered) lists
 
  -->
 
@@ -16,5 +16,11 @@ Demonstrates (unordered) lists
             <li>bar</li>
             <li>baz</li>
         </ul>
+
+        <ol>
+            <li>foo</li>
+            <li>bar</li>
+            <li>baz</li>
+        </ol>
     </body>
 </html>
